// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`horizontal overflow snapshot Progress: 0 1`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="progress"
  role="progressbar"
>
  <div
    slot="determinate"
  >
    determinate
  </div>
</div>
`;

exports[`horizontal overflow snapshot Progress: 1 1`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={undefined}
  className="progress"
  role="progressbar"
>
  <div
    slot="indeterminate"
  >
    indeterminate
  </div>
  <div
    slot="indeterminate"
  >
    indeterminate
  </div>
</div>
`;
